Partners grid on mobile fix. Grammar fixes.

--- a/static/sass/components/_headings.scss
+++ b/static/sass/components/_headings.scss
@@ -1,3 +1,6 @@
-h2 {
+h2, .beta {
+    @include font-size(18px, false);
 
+    font-weight: normal;
+    font-style: italic;
 }
